test/bad/functions/name01.px

func f(x: Int): Int def
    return x

f = f
